# DB

KP/app/: admin.py  envars.py  login.py  logout.py  main.py  pyproject.toml  tournament.py
KP/back/: database_connection.py  main.py  pyproject.toml
KP/back/dev_data/: db_filling.py  db_init.sql
KP/back/dev_data/tables/: 1-users.csv  2-teams.csv  3-team_members.csv  4-tournaments.csv  5-matches.csv  6-schedule.csv  7-tournament_bracket.csv
KP/diagrams/: bd-structure.uml  buisness-processes.uml  infrastructure.uml  integrations.uml  users.uml
